--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ section {
 
 .content .image {
     position: relative;
-    width: 100%;
-    max-width: 1000px;
+    width: 1000px;
+    max-width: 800px;
     height: 1000px;
     overflow: hidden;
     margin-bottom: 20px;
