--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ section {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 800px;
+    height: 800px;
     object-fit: cover;
     border-radius: 10px;
 }
